--- a/bujo-app/src/app/globals.css
+++ b/bujo-app/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 @import "flowbite";
 
 :root {
@@ -19,6 +19,7 @@
 }
 
 body {
+    font-family: "Inter", sans-serif;
     color: rgb(var(--foreground-rgb));
     background: linear-gradient(
             to bottom,
