--- a/bujo-app/src/app/globals.css
+++ b/bujo-app/src/app/globals.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 @import "flowbite";
 
 :root {
@@ -32,5 +34,14 @@ body {
 @layer utilities {
     .text-balance {
         text-wrap: balance;
+    }
+}
+
+@layer base {
+    h1 {
+        @apply text-5xl font-kalam;
+    }
+    p {
+        @apply font-inter;
     }
 }
